Avoid issue with anchor tags being behind fixed menu bar by hiding the menu bar in Guide mode

--- a/css/style.css
+++ b/css/style.css
@@ -26,10 +26,16 @@ body {
 	color: #4D4E53; /* To match to RS Summer Exhibition 2013 site */
 	font-family: 'Earthbound', "Helvetica Neue", Helvetica, sans-serif;
 	width: 100%;
-	height: calc(100% - 2em);
 }
 body.r2l { }
 #application {
+	background: black;
+	background-image: url('../images/bg.jpg');
+	background-position: bottom;
+	background-repeat: no-repeat;
+	background-attachment: fixed;
+	background-size: 100% auto;
+/*
 	background-color:#269;
 	background-image: linear-gradient(rgba(255,255,255,.5) 1px, transparent 2px), linear-gradient(90deg, rgba(255,255,255,.5) 1px, transparent 2px), linear-gradient(rgba(255,255,255,.15) 1px, transparent 1px), linear-gradient(90deg, rgba(255,255,255,.15) 1px, transparent 1px);
 	background-size: 5em 5em, 5em 5em, 1em 1em, 1em 1em;
@@ -37,7 +43,10 @@ body.r2l { }
 	-moz-box-shadow: inset 0 0 5em #000000;
 	-webkit-box-shadow: inset 0 0 5em #000000;
 	box-shadow: inset 0 0 5em #000000;
-	min-height: calc(100%);
+*/
+	position: absolute;
+	width: 100%;
+	min-height: 100%;
 }
 #application.fullscreen {
 	position: absolute;
@@ -91,7 +100,7 @@ strong { font-weight: bold; }
 }
 .baritem a {
 	color: inherit;
-	padding: 0.25em 0.5em;
+	padding: 0.5em 0.5em;
 	text-decoration: none;
 	display: block;
 	height: 1.5em;
@@ -115,7 +124,7 @@ img.icon {
 	display: none;
 	z-index: 100;
 	position: absolute;
-	top: 2em;
+	top: 2.5em;
 	width: auto;
 	right: 0;
 	padding: 0;
@@ -137,7 +146,7 @@ img.icon {
 #language { z-index: 101; }
 #bar { z-index: 100; }
 #summaryext { z-index: 98; }
-#summary { height: 2em; overflow: hidden; }
+#summary { height: 2.5em; overflow: hidden; }
 #messages { z-index: 99; }
 .dropdown.fullwidth { color: #efefef; vertical-align: top; }
 .dropdown.fullwidth>ul { display:block; }
@@ -235,9 +244,17 @@ p .cost {
 	color: #009d00;
 }
 
-#guide .close {
-	float: right;
-	cursor: pointer;
+body.showguide #bar { display: none; }
+body.showguide #page { margin: 0em; }
+
+#guide .guidetop { display: block; }
+#guide .guidetop p { margin-bottom: 0px; }
+#guide .close { float: right; cursor: pointer; }
+/* Hack to stop anchor tags sitting behind the fixed header */
+#guide h2[id]:before,#guide h3[id]:before,#guide div[id]:before {
+    content:"";
+    display:block;
+    height: 1em;
 }
 #guide ul.index li { margin-right: 1em; width: calc(50% - 0.5em); display: inline-block; vertical-align: top; }
 #guide ul.index li:nth-child(2n) { margin-right: 0; }
@@ -251,6 +268,7 @@ p .cost {
 	padding: 0.5em;
 	text-align: center;
 }
+#guide table th a { color: #66aada; }
 #guide .tablewrapper { max-width: 100%; overflow: hidden; overflow-x: auto; margin-bottom: 1em; }
 #guide .tablewrapper table { margin-bottom: 0; }
 
@@ -260,7 +278,6 @@ p .cost {
 }
 #guide h3 { clear: both; margin-top: 1em; }
 #guide .key { font-weight: bold; }
-#guide .mission { padding-top: 2em; }
 #guide figure {
 	text-align: center;
 	width: 290px;
@@ -301,11 +318,12 @@ p .cost {
 @media only screen and (max-width: 500px){
 	.baritem a { padding: 0.25em 0.1em 0.25em 0.1em; }
 	#summary .baritem img.icon, .baritem .togglewarnings img.icon, .baritem .toggleerrors img.icon { display: none; }
-	#page { padding-top: 2em; padding-bottom: 0px; }
+	#page { padding-top: 0em; padding-bottom: 0px; }
 	#intro, #guide { padding: 1.5em; width: 100%; max-width: 100%; border-radius: 0px; }
 	#guide figure.left,#guide figure.right, #guide figure.four figure {
 		float: none;
 		width: 100%;
 		margin: 0 0 1em 0;
 	}
+	#bar { padding: 0 0.25em; }
 }
